--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
-            <button id="toggleTheme" class="btn btn-outline-secondary ml-auto">
-                <i class="fas fa-sun"></i> Light Mode
+            <button id="toggleTheme" class="btn btn-outline-secondary ml-auto" aria-label="Toggle dark/light mode">
+                <i class="fas fa-sun"></i>
             </button>
         </div>
     </nav>
@@ -38,7 +38,7 @@
     <section id="about" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">About Me</h2>
-            <p>I am a Full Stack Developer with experience in HTML, CSS, JavaScript, and various frameworks. I love creating dynamic and responsive web applications.</p>
+            <p>I am a Software Developer with experience in HTML, CSS, JavaScript, and various frameworks.</p>
         </div>
     </section>
 
@@ -97,8 +97,8 @@
             body.classList.toggle('dark-theme', !currentTheme);
             body.classList.toggle('light-theme', currentTheme);
 
-            // Update button text and icon based on current theme
-            this.innerHTML = currentTheme ? '<i class="fas fa-moon"></i> Dark Mode' : '<i class="fas fa-sun"></i> Light Mode';
+            // Update the icon based on the current theme
+            this.innerHTML = currentTheme ? '<i class="fas fa-moon"></i>' : '<i class="fas fa-sun"></i>';
         });
     </script>
 </body>
