--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
-            <button id="toggleTheme" class="btn btn-outline-secondary ml-auto" aria-label="Toggle dark/light mode">
+            <button id="toggleTheme" class="btn btn-outline-secondary ml-auto">
                 <i class="fas fa-sun"></i>
             </button>
         </div>
@@ -97,7 +97,7 @@
             body.classList.toggle('dark-theme', !currentTheme);
             body.classList.toggle('light-theme', currentTheme);
 
-            // Update the icon based on the current theme
+            // Update button icon based on current theme
             this.innerHTML = currentTheme ? '<i class="fas fa-moon"></i>' : '<i class="fas fa-sun"></i>';
         });
     </script>
