--- a/index.html
+++ b/index.html
@@ -3,55 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kishor D - Portfolio</title>
+    <title>Kishor.D - Portfolio</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Kishor D</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <!-- Dark/Light Mode Toggle Button -->
+    <div class="mode-toggle">
+        <button id="toggleTheme" class="btn btn-secondary">
+            <i class="fas fa-moon"></i> Dark Mode
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-            </ul>
-            <button id="toggleTheme" class="btn btn-outline-secondary ml-auto">
-                <i class="fas fa-sun"></i>
-            </button>
-        </div>
-    </nav>
+    </div>
 
-    <header class="bg-light text-center py-5">
-        <div class="container">
-            <img src="profile.jpg" alt="Profile Photo" class="rounded-circle profile-photo mb-3" width="150">
-            <h1>Kishor D</h1>
-            <p>Welcome to my portfolio! I'm a passionate developer.</p>
-        </div>
+    <header class="bg-primary text-white text-center py-4">
+        <h1>Kishor.D</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
-    <section id="about" class="py-5">
+    <section id="home" class="text-center py-5">
+        <h3>Hello</h3>
+        <h3>Welcome to the D7 Community</h3>
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQFL39IukrLspw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1723446499790?e=1730332800&v=beta&t=4wIgdkd7QteOR7mSUwFoLxK9WPdyykEL9T03EXNcRR0" alt="Kishor Dhaneshkumar" class="profile-photo rounded-circle mt-3" width="200" height="200">
+    </section>
+
+    <section id="about" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">About Me</h2>
-            <p>I am a Software Developer with experience in HTML, CSS, JavaScript, and various frameworks.</p>
+            <p> I’m Kishor! I am a dedicated technology enthusiast with a passion for driving innovation and creating impactful solutions. My journey in the tech world began with a curiosity about how things work, leading me to develop a robust skill set in software development and data analysis.</p>
+            <p>I possess a strong foundation in Python, exploratory data analysis, statistical methods, calculus, probability, and linear algebra—skills that are essential in today's data-driven landscape. I thrive on tackling complex challenges and am committed to delivering results that make a difference.</p>
+            <p>I’m driven by the desire to solve complex problems and create impactful projects. I’m always up for a challenge.</p>
+            <p>Let’s connect and explore the exciting possibilities within the realm of technology together!</p>
+            <p>Connect with me:</p>
+            <p>
+                <a href="https://www.linkedin.com/in/kishor-dhaneshkumar/" target="_blank" aria-label="LinkedIn" class="text-primary mx-2">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/kishor_d7/" target="_blank" aria-label="Instagram" class="text-danger mx-2">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="https://github.com/Kishor-d7" target="_blank" aria-label="GitHub" class="text-dark mx-2">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </p>
         </div>
     </section>
 
-    <section id="projects" class="bg-light py-5">
+    <section id="skills" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Skills</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Programming Languages</h4>
+                    <ul>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h4>Data Science & Machine Learning</h4>
+                    <ul>
+                        <li>Exploratory Data Analysis</li>
+                        <li>Statistical Methods</li>
+                        <li>Calculus</li>
+                        <li>Probability</li>
+                        <li>Linear Algebra</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="project" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Projects</h2>
-            <div class="project mb-4">
-                <h3>Weather Forecasting App</h3>
-                <p>Created a weather forecasting application using React and OpenWeatherMap API. It provides real-time weather updates and location-based information.</p>
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Project description goes here.</p>
+                <a href="#" class="github-link">View on GitHub</a>
             </div>
-            <div class="project mb-4">
-                <h3>Personal Portfolio Website</h3>
-                <p>Designed and developed this portfolio website to showcase my skills and projects using HTML, CSS, and Bootstrap.</p>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Project description goes here.</p>
+                <a href="#" class="github-link">View on GitHub</a>
             </div>
         </div>
     </section>
@@ -60,45 +112,41 @@
         <div class="container">
             <h2 class="text-center mb-4">Contact Me</h2>
             <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
-                    </div>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Your Email" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea class="form-control" id="message" rows="4" required></textarea>
+                    <textarea class="form-control" id="message" rows="4" placeholder="Your Message" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
         </div>
     </section>
 
-    <footer class="text-center py-4 bg-primary text-white">
-        <p>&copy; 2024 Kishor D. All Rights Reserved.</p>
+    <footer class="bg-primary text-white text-center py-3">
+        <p>&copy; 2023 Kishor.D - All Rights Reserved</p>
     </footer>
 
-    <!-- Bootstrap JS and dependencies -->
+    <!-- jQuery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
-    <!-- Dark/Light Mode Script -->
+    <!-- Custom JavaScript -->
     <script>
-        document.getElementById('toggleTheme').addEventListener('click', function() {
-            const body = document.body;
-            const currentTheme = body.classList.contains('dark-theme');
+        const toggleButton = document.getElementById('toggleTheme');
+        const body = document.body;
 
-            body.classList.toggle('dark-theme', !currentTheme);
-            body.classList.toggle('light-theme', currentTheme);
-
-            // Update button icon based on current theme
-            this.innerHTML = currentTheme ? '<i class="fas fa-moon"></i>' : '<i class="fas fa-sun"></i>';
+        toggleButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            toggleButton.innerHTML = body.classList.contains('dark-mode') 
+                ? '<i class="fas fa-sun"></i> Light Mode' 
+                : '<i class="fas fa-moon"></i> Dark Mode';
         });
     </script>
 </body>
