--- a/index.html
+++ b/index.html
@@ -148,22 +148,23 @@
         </div>
     </section>
 
-    <section id="project" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Projects</h2>
-            <div class="project mb-4">
-                <h3>Number Classifier</h3>
-                <p>Developed a model using TensorFlow to classify handwritten digits from the MNIST dataset.</p>
-                <a href="#" class="btn btn-primary">View Project</a>
-            </div>
-            <div class="project mb-4">
-                <h3>Web Scraper</h3>
-                <p>Created a Python web scraper to extract data from multiple websites and store it in a structured format.</p>
-                <a href="#" class="btn btn-primary">View Project</a>
-            </div>
+ <section id="project" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center mb-4">Projects</h2>
+        
+        <div class="project mb-4">
+            <h3>Weather and Climate Forecasting</h3>
+            <p>Developed an application using React and WeatherAPI to provide real-time weather updates and climate forecasts.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
         </div>
-    </section>
 
+        <div class="project mb-4">
+            <h3>To-Do List Application</h3>
+            <p>Created a To-Do List application using HTML, CSS, and Flask, allowing users to manage tasks efficiently.</p>
+            <a href="#" class="btn btn-primary">View Project</a>
+        </div>
+    </div>
+</section>
     <section id="contact" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Contact Me</h2>
